Fixed alignment in navbar menu, fixed buttons

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -25,6 +25,7 @@
 .banner2 {
   background-size: cover;
   background-position: center;
+  height: calc(80vh - 70px);
 }
 
 .banner2 h1 {
@@ -55,7 +56,7 @@
 }
 
 .banner-section{
-  height: calc(100vh - 150px);
+  height: calc(100vh - 70px);
   background: gray;
   vertical-align: middle;
 }
@@ -114,7 +115,7 @@
 .banner-contacts {
   background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("10473367_1424513991168939_5482884653258251894_n.jpg");
   background-size: cover;
-  height: calc(70vh - 100px);
+  height: calc(70vh - 70px);
   font-weight: 300;
 }
 
@@ -135,7 +136,7 @@
 .banner-design {
   background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("https://res.cloudinary.com/cloudnary-filipe/image/upload/v1504628755/flour3_rf4cjz.jpg");
   background-size: cover;
-  height: calc(100vh - 100px);
+  height: calc(100vh - 70px);
   padding: 100px 100px;
 }
 
@@ -162,7 +163,7 @@ line-height: 1.85714286em;
 /*---------- iphone4 and iphone5 ----------*/
 @include media("<=phoneSmall") {
   .banner2 {
-    height: calc(100vh - 100px);
+    //height: calc(100vh - 100px);
     background-image: url("https://res.cloudinary.com/cloudnary-filipe/image/upload/v1504627725/20992526_2004800283140304_8874562591505217334_n_eedhvv.jpg");
   }
 
@@ -195,7 +196,7 @@ line-height: 1.85714286em;
   }
 
   .banner2 {
-    height: calc(100vh - 100px);
+   // height: calc(100vh - 100px);
     background-image: url("https://res.cloudinary.com/cloudnary-filipe/image/upload/v1504627725/20992526_2004800283140304_8874562591505217334_n_eedhvv.jpg");
   }
 
@@ -233,7 +234,7 @@ line-height: 1.85714286em;
     font-size: 50px;
   }
   .banner2 {
-    height: calc(100vh - 100px);
+   // height: calc(100vh - 100px);
     background-image: url("https://res.cloudinary.com/cloudnary-filipe/image/upload/v1504627725/20992526_2004800283140304_8874562591505217334_n_eedhvv.jpg");
   }
 
@@ -257,7 +258,7 @@ line-height: 1.85714286em;
     font-size: 50px;
   }
   .banner2 {
-    height: calc(100vh - 100px);
+   // height: calc(100vh - 100px);
     background-image: url("https://res.cloudinary.com/cloudnary-filipe/image/upload/v1504627725/20992526_2004800283140304_8874562591505217334_n_eedhvv.jpg");
   }
 
@@ -286,7 +287,7 @@ line-height: 1.85714286em;
     font-size: 50px;
   }
   .banner2 {
-    height: calc(80vh - 100px);
+    //height: calc(80vh - 100px);
     background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,-2.6)), url("https://res.cloudinary.com/cloudnary-filipe/image/upload/v1504627725/20992526_2004800283140304_8874562591505217334_n_eedhvv.jpg");
   }
 
