--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -5,6 +5,9 @@
   font-size: 14px;
   letter-spacing: .091em;
   white-space: wrap;
+  text-transform: uppercase;
+   -webkit-transition: background 0.5s ease-in-out, color 0.5s ease-in-out;
+    transition: background 0.5s ease-in-out, color 0.5s ease-in-out;
 }
 
 .cta-btn-red:hover {
@@ -50,6 +53,14 @@
   text-decoration: none;
   opacity: 0.8;
   box-shadow: 2px 1px 2px 2px rgba(10, 10, 0, 0.5);
+}
+
+.btn-width-100 {
+  width: 100%;
+}
+
+.btn-slim {
+  padding: 1em 3.2em;
 }
 
 .btn-fillings {
