--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -7,9 +7,9 @@
 //$header-font: "Raleway", "Helvetica", "sans-serif";
 
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Alex+Brush|Muli:200,300,400');
-$base-font: 'Muli', "sans-serif";
-$header-font: 'Muli', "sans-serif";
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:300,500,700|Montserrat:300,400');
+$base-font: 'Montserrat', sans-serif;
+$header-font: 'Josefin Sans', sans-serif;
 // Local fonts (uncomment following lines)
 // @font-face {
 //   font-family: "Font Name";
