--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -41,20 +41,6 @@
   line-height: 1.8;
 }
 
-.navbar-ac .row-xs-center {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  margin-left: -0.9375rem;
-  margin-right: -0.9375rem;
-}
-
-.navbar-ac .header-logo {
-  flex: 0 0 100%;
-  max-width: 100%;
-  text-align: center;
-}
-
 /* Navbar right section (with form, links, button) */
 .navbar-ac-right {
   display: flex;
@@ -73,6 +59,7 @@
 
 /* Navbar logo */
 .navbar-ac-brand img {
+  max-width: 50px;
   height: auto;
   vertical-align: top;
   line-height: 1.8;
@@ -102,7 +89,7 @@
 /* Navbar right button */
 .navbar-ac-button {
   //margin-left: 10px;
-  padding: 0 20px;
+  padding: 1em 1.5em;
   border-radius: 0px;
   line-height: 1em;
   background-color: white;
@@ -110,11 +97,14 @@
   font-size: 12px;
   border: 2px solid black;
   text-transform: uppercase;
+  font-weight: 500;
+   -webkit-transition: background 0.5s ease-in-out, color 0.5s ease-in-out;
+    transition: background 0.5s ease-in-out, color 0.5s ease-in-out;
 }
 .navbar-ac-button:hover {
-  color: white;
-  background: #D23333;
-  border-color: #ac2626;
+  color: white !important;
+  background-color: black;
+  text-decoration: none;
 }
 
 /* Navbar search form */
@@ -163,7 +153,7 @@
   font-weight: lighter !important;
   color: #999999 !important;
   font-size: 15px !important;
-  line-height: 22px !important;
+  line-height: 1em;
   padding: 10px 20px;
 }
 
@@ -178,70 +168,34 @@
   height: 10px;
   width: 10px;
   position: absolute;
-  left: 10px;
+  right: 10px;
   top: -6px;
   background-color: white;
   transform: rotate(45deg);
   border-left: 1px solid #E6E6E6;
   border-top: 1px solid #E6E6E6;
 }
-
-.menu a {
+.navbar-ac-right .menu {
+  display: inline-block;
+}
+.navbar-ac .menu li a{
   color: black;
+  padding-right: 10px;
+  padding-left: 10px;
+  font-size: 12px;
+  letter-spacing: .091em;
+  text-transform: uppercase;
+  line-height: 1em;
 }
 
-.menu a:hover {
-  color: black;
-  text-decoration: none;
-  opacity: 0.6;
+.navbar-ac .menu li {
+  display: inline-block;
+}
+
+.navbar-ac-right ul {
+  margin-bottom: 0;
 }
 
 .row-xs-center {
   height: 100%
-}
-
-
-//-------MEDIA QUERIES-------
-
-@include media("<tablet") {
-  .navbar-ac {
-  height: 100px;
-  }
-
-  .navbar-ac .header-logo {
-    padding: 20px 0;
-  }
-
-  .navbar-ac-brand img {
-    max-width: 50px;
-  }
-
-  .header-center img {
-    flex: 0 0 33.33333%;
-    //padding: 40px 0;
-  }
-
-  .navbar-ac .header-center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-}
-
-
-@include media(">=tablet") {
-  .navbar-size-big{
-    height: 150px;
-  }
-
-  .navbar-ac .header-logo {
-    padding: 10px 0;
-  }
-
-  .navbar-ac-brand img {
-    max-width: 50px;
-    height: auto;
-    vertical-align: top;
-    line-height: 1.8;
-  }
 }
